@@ -8,7 +8,7 @@ ln -s /srv/jdk1.8.0_20 /srv/java
 
 cat >> /etc/profile.d/java.sh <<'EOF'
 export JAVA_HOME=/srv/java
-export JAVA_OPTS="-server -Xms512m -Xmx8192m  -XX:PermSize=64M -XX:MaxPermSize=512m"
+export JAVA_OPTS="-server -Xms512m -Xmx8192m"
 export CLASSPATH=$JAVA_HOME/lib:$JAVA_HOME/jre/lib:$CATALINA_HOME/lib:
 export PATH=$PATH:$JAVA_HOME/bin:$JAVA_HOME/jre/bin:$CATALINA_HOME/bin:
 EOF
