@@ -16,7 +16,7 @@ cp /srv/apache-tomcat/conf/server.xml{,.original}
 
 cat > /srv/apache-tomcat/bin/setenv.sh <<'EOF'
 export JAVA_HOME=/srv/java
-export JAVA_OPTS="-server -Xms512m -Xmx8192m  -XX:PermSize=64M -XX:MaxPermSize=512m"
+export JAVA_OPTS="-server -Xms512m -Xmx8192m"
 export CATALINA_HOME=/srv/apache-tomcat
 export CLASSPATH=$JAVA_HOME/lib:$JAVA_HOME/jre/lib:$CATALINA_HOME/lib:/srv/IngrianJCE/lib/ext/IngrianNAE-5.1.1.jar
 export PATH=$PATH:$JAVA_HOME/bin:$JAVA_HOME/jre/bin:$CATALINA_HOME/bin:
